--- a/build.gradle
+++ b/build.gradle
@@ -8,4 +8,5 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.199'
 }
